changed bio, added video, added spaces to h3

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 	<body>
 	<h2>Sherlock Hmes</h2>
-		<div id='bio'>Crime-solver. Noir detective extraordinaire.</div>
+		<div id='bio'>Crime-solver. Noir detective extraordinaire. !!!!!!!!!</div>
 	 
 	 	<h3>Assignments</h3>
 		<ul id='assignments'>
@@ -22,8 +22,13 @@
 		<h3>An invisible seal</h3>
 
 		<h3>A video</h3>
-
-		<h3>Two boxes side by side</h3>
+		<video width="300" height="240" controls="controls">
+		<source src="gizmo.mp4" type="video/mp4" />
+		</video>
+		
+		<h3>Two boxes side		by side</h3>
+		
+		
 
 	</body>
 </html>
