added iPhone code

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 		</ul>
 	
 		<h3>A nice button</h3>
+		
+		<link rel="apple-touch-icon" href="appicon.png" />
+		<link rel="apple-touch-startup-image" href="startup.png">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-webapp-status-bar-style" content="black">
+		<meta name="viewport" content="width=device-width, user-scalable=no" />
+
 
 		<h3>An invisible seal</h3>
 		<p><img width="50" class="opacity" src="seal.png" /></p>
