--- a/index.html
+++ b/index.html
@@ -35,7 +35,17 @@
 		</video>
 		
 		<h3>Two boxes side		by side</h3>
-		
+		<style>
+			body{
+				background:#eee;
+				font-family: Helvetica, Arial, sans-serif;
+			}
+			h2{
+				font-size:22px;
+				font-weight:300;
+				color:#aaa;
+			}
+		</style>
 		
 
 	</body>
