--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		</ul>
 	
 		<h3>A nice button</h3>
+		<div class="button">Click me </div>
 		
 		<link rel="apple-touch-icon" href="appicon.png" />
 		<link rel="apple-touch-startup-image" href="startup.png">
@@ -44,6 +45,17 @@
 				font-size:22px;
 				font-weight:300;
 				color:#aaa;
+			}
+			.button{
+				background:#333;
+				width:100px;
+				color:#fff;
+				height:20px;
+				-moz-border-radius: 20px;
+				-webkit-border-radius: 20px;
+				-khtml-border-radius: 20px;
+				border-radius: 20px;
+				text-align:center;
 			}
 		</style>
 		
