--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 		<source src="Arctic Fox Raids Polar Bear Kill.mp4" type="video/mp4" />
 		</video>
 		
-		<h3>Two boxes side		by side</h3>
+		<h4>Two boxes side		by side</h4>
+        <div class = "box"></div>
 		<style>
 			body{
 				background:#eee;
@@ -57,6 +58,12 @@
 				border-radius: 20px;
 				text-align:center;
 			}
+          .box{
+              width: 25px;
+              padding: 25px;
+              border: 25px solid navy;
+              margin: 25px;
+          }
 		</style>
 		
 
