added two boxes side by side

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 		
 		<h4>Two boxes side		by side</h4>
         <div class = "box"></div>
+        <div class = "box2"></div>
 		<style>
 			body{
 				background:#eee;
@@ -58,8 +59,9 @@
 				border-radius: 20px;
 				text-align:center;
 			}
-          .box{
+          .box, .box2{
               width: 25px;
+              float:left;
               padding: 25px;
               border: 25px solid navy;
               margin: 25px;
