--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 		<h3>A video</h3>
 		<video width="300" height="240" controls="controls">
-		<source src="Arctic Fox Raids Polar Bear Kill.mp4" type="video/mp4" />
+		<source src="ArcticFoxRaidsPolarBearKill.mp4" type="video/mp4" />
 		</video>
 		
 		<h4>Two boxes side		by side</h4>
