made seal invisible

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
               border: 25px solid navy;
               margin: 25px;
           }
+		  img {
+			opacity: 0.02;
+			
+		}
 		</style>
 		
 
